--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
+    "mint-ui": "^2.2.13",
     "vue": "^2.5.13",
+    "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "vue-resource": "^1.3.5"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.3",
@@ -68,6 +70,7 @@
     "vue-loader": "^13.6.2",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.13",
+    "vux-loader": "^1.1.30",
     "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.9.1",
     "webpack-dev-server": "^2.9.7",
